# food

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Case-Study-README.md  Dockerfile  LICENSE  README.md  app.vue  design.md  dist  docker-start.sh  drizzle.config.ts  foodora-tauri2-roadmap.md  nuxt.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  vitest.config.ts  vitest.workspace.ts
.claude/: CLAUDE.md
.github/workflows/: test.yml
.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/manifest/: latest.json
.nuxt/types/: build.d.ts  components.d.ts  imports.d.ts  nitro-imports.d.ts  nitro-nuxt.d.ts  nitro-routes.d.ts  plugins.d.ts  runtime-config.d.ts
.output/: nitro.json
.output/public/: 200.html  index.html  manifest.webmanifest  sw.js
.output/server/: index.mjs  package.json
app/: spa-loading-template.html
app/assets/: tokens.css
app/components/: BottomNav.vue  EmptyState.vue  IngredientForm.vue  OnboardingBarrier.vue  RecipeCard.vue  RecipeForm.vue
app/composables/: useApi.ts  useOnboarding.ts  useTheme.ts
app/layouts/: default.vue
app/middleware/: auth.ts
app/pages/: einstellungen.vue  index.vue  lager.vue  liste.vue  login.vue  plan.vue  register.vue
app/stores/: auth.ts  recipes.ts  theme.ts
drizzle/: 0000_init.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: setup.ts
(+166 files in other folders)
