[package]
name = "foodora"
version = "0.1.0"
description = "Foodora mobile shell"
authors = ["Foodora Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "foodora"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = ["wry"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
